[tool.poetry]
name = "qiskit-service"
version = "0.1.0"
description = ""
authors = ["Philipp Wundrack <philipp.wundrack@live.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qiskit = "^1.2.4"
marshmallow = "^3.23.1"
flask = "^3.1.0"
flask-smorest = "^0.45.0"
rq = "^2.0.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
qiskit-ibm-runtime = "^0.33.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
